# ESP32_OTA

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
BLE/inc/: ble.h
OTA/inc/: ESP_OTA.h
OTA/src/: ESP_OTA.c
Sd_Card/inc/: Sd_Card.h
Sd_Card/src/: Sd_Card.c
Sim7600/inc/: sim7600.h
Sim7600/src/: sim7600.c
main/: CMakeLists.txt  main.c  main.h
